fix build, adicionando dependência

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install textual
+          pip install ollama
           pip install pyinstaller
 
       - name: Build executable with PyInstaller
