--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
           pyinstaller --onedir `
               --add-data "Style.tcss;." `
               --hidden-import textual.widgets._tab_pane `
+              --hidden-import=rich._unicode_data --collect-all=rich `
               --name ollama-tui `
               Main.py
 
